syntax = "proto3";

package news_pvu_v1;

service NewsPvuService {
  rpc GetStatus (StatusRequest) returns (StatusReply) {}
}

message StatusRequest {
  string id = 1;
}

message StatusReply {
  string status = 1;
  string message = 2;
}
